--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,28 @@
 
 @layer base {
     h1 {
-        @apply text-2xl;
+        @apply text-lg;
         @apply font-bold;
-        @apply text-gray-800;
+        @apply text-gray-100;
+        @apply sm:text-3xl;
+
     }
+
     h2 {
         @apply text-xl;
+        @apply font-bold;
+        @apply sm:text-xl;
+        @apply text-gray-100;
+    }
+
+    h3 {
+        @apply sm:text-lg;
+        @apply text-gray-400;
+    }
+
+    p {
+        @apply font-light;
+        @apply text-gray-400;
+
     }
 }
